--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "backpack/backupmanager": "^1.3",
         "backpack/crud": "^3.4",
+        "backpack/langfilemanager": "^1.0",
         "barryvdh/laravel-elfinder": "^0.3.12",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
