--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "backpack/crud": "^3.4",
         "backpack/langfilemanager": "^1.0",
         "backpack/logmanager": "^2.3",
+        "backpack/menucrud": "^1.0",
         "backpack/pagemanager": "^1.1",
         "backpack/settings": "^2.0",
         "barryvdh/laravel-elfinder": "^0.3.12",
