--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "backpack/langfilemanager": "^1.0",
         "backpack/logmanager": "^2.3",
         "backpack/menucrud": "^1.0",
+        "backpack/newscrud": "^2.1",
         "backpack/pagemanager": "^1.1",
         "backpack/settings": "^2.0",
         "barryvdh/laravel-elfinder": "^0.3.12",
